# vulkan_engine

./: .gitignore  BuildAll_Debug.bat  BuildAll_Release.bat  Build_Debug.bat  Build_Release.bat  CMakeLists.txt  README.md  Vulkan_Engine.sln  Vulkan_Engine.vcxproj  Vulkan_Engine.vcxproj.filters
Main/: CMakeLists.txt  Main.vcxproj  Main.vcxproj.filters  imgui.ini  main.cpp
Resources/Serialized/: 00_skap.dds  01_STUB-bump.dds  01_STUB.dds  01_S_ba.dds  01_S_kap-bump.dds  01_S_kap.dds  01_St_kp-bump.dds  01_St_kp.dds  KAMEN-bump.dds  KAMEN-stup.dds  KAMEN.dds  background.dds  background_ddn.dds  chain_texture.dds  chain_texture_ddn.dds  chain_texture_mask.dds  debrovicSponza.binary  lion.dds  lion2_ddn.dds  lion_ddn.dds  prozor1.dds  reljef-bump.dds  reljef.dds  sp_luk-bump.dds  sp_luk.dds  spnza_bricks_a_ddn.dds  spnza_bricks_a_diff.dds  spnza_bricks_a_spec.dds  sponza_arch_ddn.dds  sponza_arch_diff.dds  sponza_arch_spec.dds  sponza_ceiling_a_diff.dds  sponza_ceiling_a_spec.dds  sponza_column_a_ddn.dds  sponza_column_a_diff.dds  sponza_column_a_spec.dds  sponza_column_b_ddn.dds  sponza_column_b_diff.dds  sponza_column_b_spec.dds  sponza_column_c_ddn.dds  (+38 more)
Shaders/: CMakeLists.txt  Shaders.vcxproj  Shaders.vcxproj.filters  compile.bat  compileAllSource.bat
Shaders/outputSPV/: simple.frag.spv  simple.vert.spv
Shaders/sourceGLSL/: depthonly.vert  depthonly.vert.spv  quad.frag  quad.frag.spv  quad.vert  quad.vert.spv  simple.frag  simple.frag.spv  simple.vert  simple.vert.spv
Third_Party_Project/: CMakeLists.txt  Third_Party_Project.vcxproj  Third_Party_Project.vcxproj.filters  dds_loader.h  dds_loader_implementation.cpp  tinygltf_implementation.cpp  tinyobjloader_implementation.cpp
Third_Party_Project/x64/Debug/Third_Pa.7c06a47f.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Third_Party_Project/x64/Release/Third_Pa.7c06a47f.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Unit_Tests/: CMakeLists.txt  Unit_Tests.vcxproj  Unit_Tests.vcxproj.filters  test_binarySerialization.cpp
Unit_Tests/DataStructures/: Test_StagingBufferPool.cpp  main.cpp
Vulkan_Engine/: CMakeLists.txt  Vulkan_Engine.vcxproj  Vulkan_Engine.vcxproj.filters  imgui.ini  project_analyzer_rule_set.ruleset
Vulkan_Engine/src/: main.cpp  vk_engine.cpp  vk_engine.h  vk_types.cpp  vk_types.h  vkinit_instance.cpp  vkinit_queue.cpp
Vulkan_Engine/src/Engine/: Bitmask.h  RenderLoopStatistics.h  Window.cpp  Window.h
Vulkan_Engine/src/EngineCore/: BuffersUBO.cpp  BuffersUBO.h  BuffersUBOPool.cpp  BuffersUBOPool.h  Camera.cpp  Camera.h  CollectionUtility.h  Color.h  Common.h  DescriptorPoolManager.cpp  DescriptorPoolManager.h  ImGuiHandle.cpp  ImGuiHandle.h  IndexAttributes.cpp  IndexAttributes.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshPrimitives.cpp  PipelineBinding.cpp  PipelineBinding.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  ShaderSource.cpp  ShaderSource.h  StagingBufferPool.cpp  StagingBufferPool.h  SubMesh.cpp  Texture.cpp  Texture.h  Transform.cpp  Transform.h  UboAllocatorDelegate.cpp  UboAllocatorDelegate.h  VertexAttributes.cpp  VertexAttributes.h  VertexBinding.cpp  (+5 more)
Vulkan_Engine/src/FileManager/: Directories.cpp  Directories.h  FileIO.cpp  FileIO.h  Path.cpp  Path.h
Vulkan_Engine/src/Interfaces/: IRequireInitialization.h
Vulkan_Engine/src/Loaders/Model/: Common.cpp  Common.h  Loader_ASSIMP.cpp  Loader_ASSIMP.h  Loader_FBX.cpp  Loader_FBX.h  Loader_OBJ.cpp  Loader_OBJ.h  ModelLoaderOptions.h
Vulkan_Engine/src/Math/: BoundsAABB.cpp  BoundsAABB.h  Frustum.cpp  Frustum.h  Plane.cpp  Plane.h
Vulkan_Engine/src/Presentation/: Device.cpp  Device.h  Frame.cpp  Frame.h  FrameCollection.cpp  FrameCollection.h  HardwareDevice.cpp  HardwareDevice.h  PresentationTarget.cpp  PresentationTarget.h  PresentationTarget_GraphicsMaterial.cpp  PresentationTarget_RenderLoop.cpp
Vulkan_Engine/src/Presentation/Passes/: DebugPass.cpp  DebugPass.h  Pass.cpp  Pass.h  ShadowmapPass.cpp  ShadowmapPass.h
Vulkan_Engine/src/Profiling/: ProfileMarker.cpp  ProfileMarker.h
Vulkan_Engine/src/VkTypes/: InitializersUtility.cpp  InitializersUtility.h  PipelineConstructor.cpp  PipelineConstructor.h  PushConstantTypes.h  VkGraphicsPipeline.h  VkMaterialVariant.cpp  VkMaterialVariant.h  VkMemoryAllocator.cpp  VkMemoryAllocator.h  VkMesh.cpp  VkMesh.h  VkMeshRenderer.cpp  VkMeshRenderer.h  VkShader.cpp  VkShader.h  VkTexture.cpp  VkTexture.h  VulkanValidationLayers.cpp  VulkanValidationLayers.h  vkInitQueueFamily.h
src/: main.cpp  vk_engine.cpp  vk_engine.h  vk_types.cpp  vk_types.h  vkinit_instance.cpp
src/EngineCore/: Scene.h
src/Presentation/: Device.cpp  Device.h  Frame.cpp  Frame.h  FrameCollection.cpp  FrameCollection.h  HardwareDevice.cpp  HardwareDevice.h  HardwarePresentation.cpp  HardwarePresentation.h  PresentationDevice.cpp  PresentationDevice.h  PresentationFrames.cpp  PresentationFrames.h  PresentationTarget.cpp  PresentationTarget.h
x64/Debug/: Vulkan_Engine.exe.recipe  vc143.idb
x64/Debug/Vulkan_Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Vulkan_Engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: Vulkan_Engine.exe.recipe  Vulkan_Engine.iobj  Vulkan_Engine.ipdb
x64/Release/Vulkan_Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Vulkan_Engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
